src/patches/cfltk_1_5_23/cfl.h

typedef struct Fl_Widget Fl_Widget;
typedef struct Fl_Widget_Tracker Fl_Widget_Tracker;
void Fl_event_dispatch(int (*cb)(int event, void *));
void Fl_set_box_type_cb(
    int, void (*cb)(int, int, int, int, unsigned int), int, int, int, int
);
void Fl_set_box_type_with_focus_cb(
    int, void (*cb)(int, int, int, int, unsigned int), int, int, int, int, void (*cbf)(Fl_Boxtype, int, int, int, int, unsigned int, unsigned int)
);
unsigned int Fl_contrast(unsigned int c1, unsigned int c2);
unsigned int Fl_rgb_color(unsigned char r, unsigned char g, unsigned char b);
unsigned int Fl_rgb_color2(unsigned char g);
unsigned int Fl_cmap(unsigned int c);
unsigned int Fl_box_color(unsigned int c);
void Fl_set_box_color(unsigned int c);
void Fl_add_system_handler(int (*)(void *, void *), void *);
void Fl_remove_system_handler(int (*)(void *, void *));
int Fl_gl_visual(int mode);
void Fl_add_clipboard_notify(void (*cb)(int source, void *data), void *data);
void Fl_remove_clipboard_notify(void (*cb)(int source, void *data));
void Fl_open_callback(void (*cb)(const char *));
void Fl_disable_wayland(void);
Fl_Widget *Fl_Widget_Tracker_widget(Fl_Widget_Tracker *t);
int Fl_Widget_Tracker_exists(Fl_Widget_Tracker *t);
void Fl_get_color_rgb(
    unsigned int col, unsigned char *r, unsigned char *g, unsigned char *b
);
int Fl_callback_reason(void);
void *Fl_get_fl_msg(void);
void *Fl_cairo_make_current(Fl_Widget *w);
void Fl_set_cairo_autolink_context(int alink);
int Fl_cairo_autolink_context(void);
void *Fl_cairo_cc(void);
void Fl_set_cairo_cc(void *c, int own);
void Fl_cairo_flush(void *c);
int Fl_option(int opt);
void Fl_set_option(int opt, int val);
void Fl_load_system_icons(void);
void Fl_set_contrast_level(int level);
int Fl_contrast_level(void);
void Fl_set_contrast_mode(int mode);
int Fl_contrast_mode(void);
void Fl_set_contrast_function(unsigned int (*f)(unsigned int, unsigned int, int, int));
int Fl_using_wayland(void);
void Fl_watch_widget_pointer(Fl_Widget *w);
void Fl_release_widget_pointer(Fl_Widget *w);