src/cfl.pas


  function Fl_contrast(c1:dword; c2:dword):dword;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_contrast';

  function Fl_rgb_color(r:byte; g:byte; b:byte):dword;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_rgb_color';

  function Fl_rgb_color2(g:byte):dword;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_rgb_color2';

  function Fl_cmap(c:dword):dword;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_cmap';

  function Fl_box_color(c:dword):dword;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_box_color';

  procedure Fl_set_box_color(c:dword);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_box_color';

  procedure Fl_add_system_handler(_para1:Fl_ArgCallback5; _para2:pointer);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_add_system_handler';

  procedure Fl_remove_system_handler(_para1:Fl_ArgCallback5);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_remove_system_handler';

  function Fl_gl_visual(mode:longint):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_gl_visual';

  procedure Fl_add_clipboard_notify(cb:Fl_ArgCallback6; data:pointer);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_add_clipboard_notify';

  procedure Fl_remove_clipboard_notify(cb:Fl_ArgCallback6);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_remove_clipboard_notify';

  procedure Fl_open_callback(cb:Fl_ArgCallback7);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_open_callback';

  procedure Fl_disable_wayland;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_disable_wayland';

  function Fl_Widget_Tracker_widget(t: PFl_Widget_Tracker):PFl_Widget;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_Widget_Tracker_widget';

  function Fl_Widget_Tracker_exists(t: PFl_Widget_Tracker):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_Widget_Tracker_exists';

  procedure Fl_get_color_rgb(col:dword; r: Pbyte; g: Pbyte; b: Pbyte);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_get_color_rgb';

  function Fl_callback_reason:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_callback_reason';

  function Fl_get_fl_msg:pointer;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_get_fl_msg';

  function Fl_cairo_make_current(w: PFl_Widget):pointer;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_cairo_make_current';

  procedure Fl_set_cairo_autolink_context(alink:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_cairo_autolink_context';

  function Fl_cairo_autolink_context:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_cairo_autolink_context';

  function Fl_cairo_cc:pointer;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_cairo_cc';

  procedure Fl_set_cairo_cc(c:pointer; own:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_cairo_cc';

  procedure Fl_cairo_flush(c:pointer);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_cairo_flush';

  function Fl_option(opt:longint):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_option';

  procedure Fl_set_option(opt:longint; val:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_option';

  procedure Fl_load_system_icons;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_load_system_icons';

  procedure Fl_set_contrast_level(level:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_contrast_level';

  function Fl_contrast_level:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_contrast_level';

  procedure Fl_set_contrast_mode(mode:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_contrast_mode';

  function Fl_contrast_mode:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_contrast_mode';

  procedure Fl_set_contrast_function(f:Fl_ArgCallback8);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_contrast_function';

  function Fl_using_wayland:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_using_wayland';

  procedure Fl_watch_widget_pointer(w: PFl_Widget);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_watch_widget_pointer';

  procedure Fl_release_widget_pointer(w: PFl_Widget);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_release_widget_pointer';

{ C++ end of extern C conditionnal removed }
{$endif}

implementation

end.
